[gd_scene load_steps=18 format=2]

[ext_resource path="res://tools/icons/icon_record.svg" type="Texture" id=1]
[ext_resource path="res://songs/the_top/Ken Blast - The Top.ogg" type="AudioStream" id=2]
[ext_resource path="res://tools/editor/Editor.gd" type="Script" id=3]
[ext_resource path="res://tools/icons/icon_save.svg" type="Texture" id=4]
[ext_resource path="res://tools/editor/EditorGamePreview.gd" type="Script" id=5]
[ext_resource path="res://tools/icons/icon_stop.svg" type="Texture" id=6]
[ext_resource path="res://tools/editor/EditorCreateTab.gd" type="Script" id=7]
[ext_resource path="res://rythm_game/rhythm_game_playarea.tscn" type="PackedScene" id=8]
[ext_resource path="res://tools/icons/icon_pause.svg" type="Texture" id=9]
[ext_resource path="res://menus/visualizer/Visualizer.tscn" type="PackedScene" id=10]
[ext_resource path="res://tools/icons/icon_play.svg" type="Texture" id=11]
[ext_resource path="res://tools/editor/EditorInspector.tscn" type="PackedScene" id=12]
[ext_resource path="res://tools/editor/SongSelectorDialog.tscn" type="PackedScene" id=13]
[ext_resource path="res://tools/editor/EditorTimeline.tscn" type="PackedScene" id=14]
[ext_resource path="res://tools/icons/icon_load.svg" type="Texture" id=15]
[ext_resource path="res://default_theme_tools.tres" type="Theme" id=16]
[ext_resource path="res://tools/icons/icon_back.svg" type="Texture" id=17]

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 16 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.25 )
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.10803
margin_right = 1.10803
margin_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel2/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_right = 1260.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 24.0
icon = ExtResource( 17 )
flat = true

[node name="LoadButton" type="Button" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 52.0
margin_bottom = 24.0
icon = ExtResource( 15 )
flat = true

[node name="SaveButton" type="Button" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 84.0
margin_bottom = 24.0
icon = ExtResource( 4 )
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 1260.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="Offset" type="SpinBox" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 527.0
margin_right = 603.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
hint_tooltip = "Offset"
step = 0.001
align = 1
suffix = "s"

[node name="Label" type="Label" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 607.0
margin_top = 1.0
margin_right = 628.0
margin_bottom = 23.0
text = "1/"

[node name="NoteResolution" type="SpinBox" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 632.0
margin_right = 787.42
margin_bottom = 24.0
rect_min_size = Vector2( 155.42, 0 )
hint_tooltip = "Snap resolution"
min_value = 1.0
value = 4.0
suffix = "th of a beat"

[node name="BPMSpinBox" type="SpinBox" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 791.0
margin_right = 901.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 0 )
hint_tooltip = "Beats per minute"
max_value = 1000.0
value = 160.0
suffix = "bpm"

[node name="MetreOptionButton" type="OptionButton" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 905.0
margin_right = 1076.0
margin_bottom = 24.0
hint_tooltip = "Metre"
text = "Quadruple metre (4/4)"
items = [ "Quadruple metre (4/4)", null, false, 0, null, "Triple metre (3/4)", null, false, 1, null, "Duple metre (3/4)", null, false, 2, null ]
selected = 0

[node name="PlayButton" type="Button" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 1080.0
margin_right = 1108.0
margin_bottom = 24.0
icon = ExtResource( 11 )
flat = true

[node name="PauseButton" type="Button" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 1112.0
margin_right = 1140.0
margin_bottom = 24.0
icon = ExtResource( 9 )
flat = true

[node name="StopButton" type="Button" parent="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 1144.0
margin_right = 1172.0
margin_bottom = 24.0
icon = ExtResource( 6 )
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1280.0
margin_bottom = 495.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Preview" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 1063.0
margin_bottom = 441.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="GamePreview" type="Control" parent="VBoxContainer/HBoxContainer/Preview"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visualizer" parent="VBoxContainer/HBoxContainer/Preview/GamePreview" instance=ExtResource( 10 )]
visible = false
show_behind_parent = true

[node name="RythmGame" parent="VBoxContainer/HBoxContainer/Preview/GamePreview" instance=ExtResource( 8 )]

[node name="DebugLabel" parent="VBoxContainer/HBoxContainer/Preview/GamePreview/RythmGame/CanvasLayer" index="0"]
visible = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Preview/GamePreview"]
margin_right = 8.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WidgetArea" type="Control" parent="VBoxContainer/HBoxContainer/Preview/GamePreview"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.5 )
margin_left = 1067.0
margin_right = 1280.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
tab_align = 0

[node name="Inspector" parent="VBoxContainer/HBoxContainer/TabContainer" instance=ExtResource( 12 )]
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Recording" type="Control" parent="VBoxContainer/HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/TabContainer/Recording"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/TabContainer/Recording/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 193.0
margin_bottom = 397.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/TabContainer/Recording/MarginContainer/VBoxContainer"]
margin_right = 265.0
margin_bottom = 31.0
text = "Layer to write to:"

[node name="RecordingLayerSelectButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/TabContainer/Recording/MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 265.0
margin_bottom = 66.0

[node name="RecordButton" type="Button" parent="VBoxContainer/HBoxContainer/TabContainer/Recording/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 265.0
margin_bottom = 101.0
text = "Start Recording"
icon = ExtResource( 1 )

[node name="Create" type="Control" parent="VBoxContainer/HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/TabContainer/Create"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/TabContainer/Create/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 193.0
margin_bottom = 397.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/TabContainer/Create/MarginContainer/VBoxContainer"]
margin_right = 265.0
margin_bottom = 31.0
text = "Note type to create"

[node name="NoteTypeSelectButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/TabContainer/Create/MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 265.0
margin_bottom = 66.0
text = "Single Note"

[node name="CreateItemButton" type="Button" parent="VBoxContainer/HBoxContainer/TabContainer/Create/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 265.0
margin_bottom = 101.0
text = "Create"

[node name="EditorTimelineContainer" type="Panel" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.5 )
margin_top = 499.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorTimeline" parent="VBoxContainer/EditorTimelineContainer" instance=ExtResource( 14 )]
self_modulate = Color( 1, 1, 1, 1 )
margin_left = -1.16632
margin_right = -1.16626

[node name="ScrollContainer" parent="VBoxContainer/EditorTimelineContainer/EditorTimeline/VBoxContainer" index="1"]
margin_bottom = 221.0

[node name="HBoxContainer" parent="VBoxContainer/EditorTimelineContainer/EditorTimeline/VBoxContainer/ScrollContainer" index="0"]
margin_bottom = 181.0

[node name="VBoxContainer" parent="VBoxContainer/EditorTimelineContainer/EditorTimeline/VBoxContainer/ScrollContainer/HBoxContainer" index="0"]
margin_bottom = 181.0

[node name="LayerNames" parent="VBoxContainer/EditorTimelineContainer/EditorTimeline/VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer" index="0"]
margin_bottom = 153.0

[node name="NewLayerButton" parent="VBoxContainer/EditorTimelineContainer/EditorTimeline/VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer" index="1"]
margin_left = 0.0
margin_top = 157.0
margin_right = 116.0
margin_bottom = 181.0
size_flags_horizontal = 1
text = "Add Layer"

[node name="Layers" parent="VBoxContainer/EditorTimelineContainer/EditorTimeline/VBoxContainer/ScrollContainer/HBoxContainer" index="1"]
margin_bottom = 181.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="SongSelector" parent="." instance=ExtResource( 13 )]

[node name="SaveSongSelector" parent="." instance=ExtResource( 13 )]

[node name="ExitDialog" type="ConfirmationDialog" parent="."]
margin_right = 227.0
margin_bottom = 86.0
popup_exclusive = true
window_title = "Are you sure about that?"
dialog_text = "Any unsaved progress will be lost."
dialog_autowrap = true
[connection signal="load_song" from="." to="VBoxContainer/EditorTimelineContainer/EditorTimeline" method="_on_new_song_loaded"]
[connection signal="playhead_position_changed" from="." to="VBoxContainer/EditorTimelineContainer/EditorTimeline" method="_on_playhead_position_changed"]
[connection signal="scale_changed" from="." to="VBoxContainer/EditorTimelineContainer/EditorTimeline" method="_on_Editor_scale_changed"]
[connection signal="timing_information_changed" from="." to="VBoxContainer/EditorTimelineContainer/EditorTimeline" method="_on_timing_information_changed"]
[connection signal="pressed" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="ExitDialog" method="popup_centered_ratio" binds= [ 0.25 ]]
[connection signal="pressed" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/LoadButton" to="SongSelector" method="popup_centered_ratio" binds= [ 0.35 ]]
[connection signal="pressed" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="SaveSongSelector" method="popup_centered_ratio" binds= [ 0.35 ]]
[connection signal="value_changed" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/Offset" to="." method="_on_timing_information_changed"]
[connection signal="value_changed" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/NoteResolution" to="." method="_on_timing_information_changed"]
[connection signal="value_changed" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/BPMSpinBox" to="." method="_on_timing_information_changed"]
[connection signal="item_selected" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/MetreOptionButton" to="." method="_on_timing_information_changed"]
[connection signal="pressed" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="note_selected" from="VBoxContainer/HBoxContainer/Preview/GamePreview/RythmGame" to="." method="_on_RythmGame_note_selected"]
[connection signal="note_updated" from="VBoxContainer/HBoxContainer/Preview/GamePreview/RythmGame" to="." method="_on_RythmGame_note_updated"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TabContainer/Recording/MarginContainer/VBoxContainer/RecordButton" to="." method="_on_RecordButton_pressed"]
[connection signal="create_note_type" from="VBoxContainer/HBoxContainer/TabContainer/Create" to="." method="add_user_timing_point"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TabContainer/Create/MarginContainer/VBoxContainer/CreateItemButton" to="VBoxContainer/HBoxContainer/TabContainer/Create" method="_on_create_note"]
[connection signal="layers_changed" from="VBoxContainer/EditorTimelineContainer/EditorTimeline" to="." method="_on_EditorTimeline_layers_changed"]
[connection signal="chart_selected" from="SongSelector" to="." method="_on_SongSelector_chart_selected"]
[connection signal="chart_selected" from="SaveSongSelector" to="." method="_on_SaveSongSelector_chart_selected"]
[connection signal="confirmed" from="ExitDialog" to="." method="_on_ExitDialog_confirmed"]

[editable path="VBoxContainer/HBoxContainer/Preview/GamePreview/RythmGame"]

[editable path="VBoxContainer/EditorTimelineContainer/EditorTimeline"]
